[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/credits_screen.gd" id="1"]

[node name="CreditsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.01, 0.02, 0.01, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CreditsVBox" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="CreditsText" type="RichTextLabel" parent="CenterContainer/CreditsVBox"]
custom_minimum_size = Vector2(600, 550)
layout_mode = 2
bbcode_enabled = true
theme_override_colors/default_color = Color(0, 0.8, 0, 1)
scroll_active = true

[node name="BackLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -35.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 0
modulate = Color(1, 1, 1, 0)
theme_override_colors/font_color = Color(0, 0.5, 0, 0.6)
theme_override_font_sizes/font_size = 12
text = "Press any key to return"
horizontal_alignment = 1
